--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "RoutinePro Tracker",
+  "name": "RoutinePro",
   "short_name": "RoutinePro",
   "start_url": "./index.html",
   "display": "standalone",
@@ -9,15 +9,13 @@
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3209/3209265.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3209/3209265.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
-
-
